tests/typechecking/valid/if3.ml
if false<=true then
print_int(1)
else
print_int(5)
