tests/typechecking/invalid/if3.ml
if 5=true then
print_int(9)
else
print_int(5)

